# bob

./: .gitignore  AGENTS.md  README.md  TODO.md  bob-config.toml  bobbingconfig.toml  default-bob-config.toml  default-bobbing-config.toml  goose.xcf  home-panels.json  home.html  mkdocs.yml  package-lock.json  pyproject.toml
bob/: __init__.py  __main__.py  agents.py  chatgpt.py  components.py  db.py  llm.py  models.py  redis_manager.py  schemas.py  settings.py  shared.py  sqlite_manager.py  task_manager.py  token_expander.py  web.py
bob/conversations/: __init__.py  middleware.py  routers.py
bob/tasks/: __init__.py  redis_manager.py  sqlite_manager.py
bob/templates/: 404.html  422.html  home.html  login.html  mock.html
bob/templates/partials/: conversation_item.html  conversation_link.html  conversation_list.html  message_item.html  messages.html  new_conversation.html  user_message_and_stream.html
bobbing/: __init__.py  __main__.py  cli.py
design/: home3.html  home4.html
design/backup/: bob-home.html  home2.html
docs/: bobbing_cli.md  index.md  technical_guide.md  user_manual.md
img/: bob-home.xcf
static/: bob-client.js
tests/: playwright-chat.spec.js  test_agents_dynamic.py  test_components.py  test_memory.py
